--- a/fastlane/exportOptions.plist
+++ b/fastlane/exportOptions.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>compileBitcode</key>
+	<false/>
 	<key>method</key>
 	<string>enterprise</string>
 	<key>signingStyle</key>
@@ -10,8 +12,8 @@
 	<string>iPhone Distribution: Daimler South East Asia Pte Ltd</string>
 	<key>provisioningProfiles</key>
 	<dict>
-            <key>com.daimler.SalesTouch.int.internal.iPad</key>
-            <string>a8b435a2-0397-4c80-8508-f1ddfd94dfa1</string>
-        </dict>
+		<key>com.daimler.SalesTouch.int.internal.iPad</key>
+		<string>SalesTouch_INT_ENV_Distribution_Profile</string>
+	</dict>
 </dict>
 </plist>
